Fixed a scrollbar showing up in the header on mobile sizes

--- a/app/components/nav-header/header.scss
+++ b/app/components/nav-header/header.scss
@@ -1,7 +1,6 @@
 .site-header {
 	height: 130px;
 	$padding: 15px;
-	overflow: auto; // clear fix
 
 	ul {
 		padding: 0 $padding;
